[tool.poetry]
name = "requests-cache-test"
version = "0.1.0"
description = ""
authors = ["DavidSchmidt00 <davod2211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "1.0.0b0"
requests-mock = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
